fix for overflow x in skill_container

--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@ section {
   flex-direction: column;
   gap: 12px;
   padding: 0 24px;
+  overflow-x: hidden;
 }
 
 #skills_container > .dropdown {
